# nfa-broker

./: LICENSE  Makefile  README.md  pyproject.toml
examples/kafka_test/: README.md  models.py  test_kafka.py
nfa/broker/: __init__.py  broker.py  factory.py
nfa/broker/adapters/faststream/: __init__.py  faststream_broker.py  kafka_broker.py  rabbit_broker.py
nfa/broker/settings/: __init__.py  base.py  kafka.py  rabbitmq.py
src/nfa/broker/: __init__.py  broker.py  enums.py  factory.py  message.py  settings.py
src/nfa/broker/adapters/faststream/: faststream_broker.py  kafka_broker.py  rabbit_broker.py
