[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nfa-broker"
description = "General broker library"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "pydantic==2.7.3",
    "pydantic-settings==2.3.0",
]

[project.optional-dependencies]
kafka = ["faststream[kafka]==0.5.10"]
rabbit = ["faststream[rabbit]==0.5.10"]

[tool.hatch.version]
path = "src/nfa/broker/version.py"

[tool.hatch.version.git]
tag-prefix = "v"

[tool.hatch.metadata]
allow-prereleases = true
readme = "README.md"
allow-direct-references = true

[tool.hatch.sdist]
include = ["/src"]

[tool.hatch.build]
include = ["/src"]
