[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nfa-broker"
description = "General broker library"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "pydantic~=2.10",
    "pydantic-settings~=2.7",
]

[project.optional-dependencies]
kafka = ["faststream[kafka]~=0.5"]
rabbitmq = ["faststream[rabbit]~=0.5"]

[tool.hatch.version]
path = "nfa/broker/version.py"

[tool.hatch.version.git]
tag-prefix = "v"

[tool.hatch.metadata]
allow-prereleases = true
readme = "README.md"
allow-direct-references = true

[tool.hatch.sdist]
include = ["/nfa"]

[tool.hatch.build]
include = ["/nfa"]
